--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "undraw-svg-collection": "github:balazser/undraw-svg-collection"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
